2008-08-28  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 529623 – TypeError not raised when setting gtk.TreeView
	adjustment property to None

	* gtk/gtk-base.defs (gtk.ScrolledWindow.set_hadjustment): Allow
	the argument to be None.
	(gtk.ScrolledWindow.set_vadjustment): Likewise.

2008-08-28  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 526189 – add __str__ and/or __repr__ to several types

	* gtk/gdk.override (_wrap_gdk_cursor_tp_repr): New function.

	* gtk/gdkcolor.override (pygdk_color_to_string_smart)
	(_wrap_gdk_color_tp_repr, _wrap_gdk_color_tp_str): New functions.

	* gtk/gdkevent.override (_wrap_gdk_event_tp_repr): New function.

	* gtk/gdkrectangle.override (_wrap_gdk_rectangle_tp_repr): New
	function.

	* tests/test_color.py (Tests.test_repr, Tests.test_str): New tests.
	(Tests._test_color_list): New helper method.

	* tests/test_rectangle.py (Tests.test_repr): New test.
	(Tests._test_rectangle_list): New helper method.

2008-08-28  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 534658 – Avoid warning when compiling against Python 2.5 or
	older

	* gtk/gtk.override (pygtk_main_watch_prepare): Avoid GCC warning.

2008-08-26  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gtk-2.14.defs: Include latest 2.14 API added in GTK+ itself.

2008-08-25  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 548602 – C-isms in pango.FontDescription

	* pango.defs (pango.FontDescription.copy_static)
	(pango.FontDescription.set_family_static)
	(pango.FontDescription.merge_static): Deprecate.

2008-08-24  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.ac: post release version bump.

=== PyGTK 2.13.0 ===
2008-08-24  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* NEWS: updated.

	* README: updated.

2008-08-24  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* tests/test_treeview.py: Comment out test_default_attributes until
	we get a response on bugs #546005 and #498010.

2008-08-24  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gtk/gtk-base.defs (gtk.Toolbar.set_icon_size)