@@ -1,5 +1,15 @@
 2008-08-28  Paul Pogonyshev  <pogonyshev@gmx.net>
 
+	Bug 541476 – Update pango examples
+
+	* examples/pango/utf8-demo.py: Fix interpreter line.  Replace all
+	escapes with corresponding characters.  Use gtk.main_quit()
+	instead of deprecated gtk.mainquit().
+
+	* examples/pango/extentdemo.py: Fix interpreter line.
+
+2008-08-28  Paul Pogonyshev  <pogonyshev@gmx.net>
+
 	Bug 529623 – TypeError not raised when setting gtk.TreeView
 	adjustment property to None
 
